07-rabbitmq-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-headless
  namespace: rabbitmq-system
  labels:
    app: rabbitmq
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: epmd
    port: 4369
    targetPort: 4369
  - name: clustering
    port: 25672
    targetPort: 25672
  selector:
    app: rabbitmq
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: rabbitmq-system
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
  - name: http
    port: 15672
    targetPort: 15672
    protocol: TCP
  - name: amqp
    port: 5672
    targetPort: 5672
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  namespace: rabbitmq-system
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
  - name: http
    port: 15672
    targetPort: 15672
    nodePort: 31672
    protocol: TCP
  type: NodePort
